tenzir/tests/exec/expr/escape/basic/invalid_sequence.txt
error: invalid unicode escape sequence
 --> exec/expr/escape/basic/invalid_sequence.tql:4:7
  |
4 |   x: "\U0000123_",
  |       ^^^^^^^^^^ 
  |
